loopwhile.BaggleSeeker.scala.code
if (isOverBaggle()){}
	else {while isOverBaggle()==false {forward()}}